// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XpPopUp renders XpPopUp correctly for correct answer 1`] = `
<View
  collapsable={false}
  style={
    {
      "bottom": 0,
      "height": "12.5%",
      "opacity": 0,
      "position": "absolute",
      "shadowColor": "#383838",
      "shadowOffset": {
        "height": 6,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 10,
      "transform": [
        {
          "translateY": 100,
        },
        {
          "translateX": 71.42850506722938,
        },
      ],
      "width": 750,
      "zIndex": 20,
    }
  }
  testID="XpPopUp"
>
  <Text
    collapsable={false}
    style={
      {
        "color": "#00897B",
        "fontFamily": "Montserrat-Bold",
        "fontSize": 18,
        "lineHeight": 28,
        "opacity": 1,
        "textAlign": "center",
      }
    }
  >
    100
    xp
  </Text>
</View>
`;

exports[`XpPopUp renders XpPopUp correctly for incorrect answer 1`] = `
<View
  collapsable={false}
  style={
    {
      "bottom": 0,
      "height": "12.5%",
      "opacity": 0,
      "position": "absolute",
      "shadowColor": "#383838",
      "shadowOffset": {
        "height": 6,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 10,
      "transform": [
        {
          "translateY": 100,
        },
        {
          "translateX": 91.97157056466692,
        },
      ],
      "width": 750,
      "zIndex": 20,
    }
  }
  testID="XpPopUp"
/>
`;
